# NASOMA

./: .env.example  .gitignore  AUDIT_22mai2026.md  CLAUDE.md  NASOMA_Business_Plan_et_Cahiers_des_Charges.md  NASOMA_PROMPT_POUR_IA_CODEUSE.md  README.md  docker-compose.yml  historique.md  historiqueNasoma.md  skills-lock.json
.claude/: settings.local.json
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_auth.py  0002_pedagogy_scans.py  0003_fallback_assistance.py  0004_vendors_detection.py  0005_billing_video_assistance.py  0006_kyc_whatsapp.py  0007_indicators.py  0008_spaced_repetition.py  0009_marketing_support.py  20260522_0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  auth.py  billing.py  communications.py  customer_signup.py  fallback.py  indicators.py  payments.py  reviews.py  scans.py  sessions.py
backend/app/core/: config.py  deps.py  logging.py  security.py
backend/app/db/: firestore.py  session.py
backend/app/models/: __init__.py  billing.py  communications.py  concepts.py  fallback.py  identity.py  indicators.py  mastery.py  otp_challenges.py  payments.py  recharge_tickets.py  scans.py  sessions.py  spaced_repetition.py  subjects.py  subscriptions.py  tenants.py  users.py  vendors.py
backend/app/schemas/: __init__.py  auth.py  billing.py  customer_signup.py  fallback.py  indicators.py  payments.py  scans.py  sessions.py
backend/app/services/: __init__.py  account_state_service.py  billing_service.py  bkt_service.py  communication_service.py  communications_service.py  concept_mapper_service.py  exercise_generator_service.py  indicators_service.py  ocr_service.py  otp_service.py  payment_service.py  phash_service.py  quota_service.py  scan_processor_service.py  scan_quality_service.py  sms_service.py  spaced_repetition_service.py  vendor_service.py  whatsapp_service.py
backend/app/services/payments/: __init__.py  base.py  hollo.py  mvola.py  stripe_provider.py
backend/app/workers/: __init__.py  ocr_worker.py
backend/scripts/: create_tables.py  init_db.sql
backend/secrets/: .gitkeep
backend/tests/: conftest.py  test_account_state_service.py  test_bkt_service.py  test_health.py  test_indicators_service.py  test_otp_service.py  test_payment_service.py  test_phash_service.py  test_scan_quality_service.py
docs/: api.md  architecture.md  pricing.md  runbook.md  (+2 more)
(+93 files in other folders)
